[package]
name = "memory-stats"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "processthreadsapi", "psapi"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"
